Fix make video icon not fitting in the column

--- a/client/styles/_event_log.scss
+++ b/client/styles/_event_log.scss
@@ -33,7 +33,7 @@ $event_log_column_count: 13;
 #event_log_data {
 	display: grid;
 	// Update $event_log_column_count to match the number of columns here
-	grid-template-columns: max-content max-content max-content max-content 1fr 150px 150px 150px 16px 25px 25px max-content 200px;
+	grid-template-columns: max-content max-content max-content max-content 1fr 150px 150px 150px 20px 25px 25px max-content 200px;
 	font-size: 12px;
 	
 	.event_log_entry_edit {
